corrected first webpage to second webpage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
   <head>
     <meta charset="utf-8">
-    <title>My first webpage!</title>
+    <title>My Second Webpage!</title>
   </head>
   <body>
     <p>Hello, World!</p>
