--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Second Webpage!</title>
-  </head>
-  <body>
-    <p>Hello, World!</p>
- <img src= "./Images/hello_world.png" alt="Hello, World!">
-  </body>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>My Second webpage!</title>
+</head>
+<body>
+  <p>Hello, World!</p>
+  <img src="./Images/hello_world.png" alt="Hello, World!">
+  <p>
+    <a href="./Genesis.html">The Old Testement, Genesis, Chapter 1</a>
+  </p>
+</body>
 </html>
-
